--- a/style.css
+++ b/style.css
@@ -14,3 +14,10 @@ img {
   margin-right: auto;
   width: 50%;
 }
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
