Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -32,3 +32,13 @@ figcaption{
   width: 800px;
   text-align: center;
 }
+
+#details{
+  display: block;
+}
+
+#deatils div{
+  background-color: red;
+  text-align: center;
+  width: 25%
+}
